<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.db</groupId>
	<artifactId>db-parent</artifactId>
	<packaging>war</packaging>
	<version>2011.1.1-1-SNAPSHOT</version>
	<name>db :: Parent</name>

    <properties>
        <jetty.version>8.1.7.v20120910</jetty.version>
        <cxf.version>2.7.0</cxf.version>
        <spring.version>3.2.0.M2</spring.version>
    </properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>1.6</source>
						<target>1.6</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.1.1</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<phase>verify</phase>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
                <version>${jetty.version}</version>
				<configuration>
                    <contextPath>/</contextPath>
					<webAppConfig>
                        <!--<webXml>${project.build.directory}/${project.build.finalName}/WEB-INF/web.xml</webXml>-->
                        <defaultsDescriptor>./webdefault.xml</defaultsDescriptor>
					</webAppConfig>
					<webAppSourceDirectory>
						${project.build.directory}/${project.build.finalName}
					</webAppSourceDirectory>
					<jettyXml>${basedir}/jetty.xml</jettyXml>
                    <stopKey>x</stopKey>
                    <stopPort>8071</stopPort>
                    <jvmArgs>-Xms1024m -Xmx1024m -XX:-UseConcMarkSweepGC -Djetty.port=8001</jvmArgs>
                    <systemProperties>
                        <systemProperty>
                            <name>log4j.configuration</name>
                            <value>file:./jetty.log4j.xml</value>
                        </systemProperty>
                        <systemProperty>
                            <name>slf4j</name>
                            <value>false</value>
                        </systemProperty>
                        <systemProperty>
                            <name>org.apache.commons.logging.Log</name>
                            <value>org.apache.commons.logging.impl.Log4JLogger</value>
                        </systemProperty>
                        <systemProperty>
                            <name>log4jLevel</name>
                            <value>INFO</value>
                        </systemProperty>
                        <systemProperty>
                            <name>log4j.configDebug</name>
                            <value>true</value>
                        </systemProperty>
                        <systemProperty>
                            <name>useDefaultConf</name>
                            <value>true</value>
                        </systemProperty>
                    </systemProperties>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>maven-central</id>
			<name>maven central</name>
			<url>http://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>jboss</id>
			<name>jboss central</name>
			<url>http://repository.jboss.org/maven2/</url>
		</repository>
		<repository>
			<id>gson</id>
			<url>http://google-gson.googlecode.com/svn/mavenrepo</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
	</repositories>
	<dependencies>
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-jaxrs</artifactId>
            <version>1.9.13</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-xc</artifactId>
            <version>1.9.13</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>${spring.version}</version>
        </dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.2</version>
		</dependency>
		<dependency>
			<groupId>net.sf.stax</groupId>
			<artifactId>stax</artifactId>
			<version>1.0</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
        <!-- CXF dependencies -->
        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-core</artifactId>
            <version>${cxf.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-frontend-jaxrs</artifactId>
            <version>${cxf.version}</version>
        </dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>servlet-api-2.5</artifactId>
			<version>6.1.14</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.16</version>
		</dependency>
		<dependency>
			<groupId>com.google.collections</groupId>
			<artifactId>google-collections</artifactId>
			<version>1.0</version>
		</dependency>
        <!-- Jetty runtime dependency -->
        <dependency>
            <groupId>org.eclipse.jetty.aggregate</groupId>
            <artifactId>jetty-all</artifactId>
            <version>${jetty.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>16.0.1</version>
        </dependency>
    </dependencies>
</project>